# towermod

./: .editorconfig  .gitignore  README.md  eslint.config.js  greet.wit  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.workspace.ts
.storybook/: main.ts  preview.tsx  vitest.setup.ts
godot/: .gitignore  export_presets.cfg  project.godot  towermod.gdextension
godot/inspector/: alignment_container.gd  alignment_row.gd  heading.gd  inspector_array.gd  inspector_base.gd  inspector_bool.gd  inspector_custom.gd  inspector_dict.gd  inspector_enum.gd  inspector_file_path.gd  inspector_numeric.gd  inspector_object.gd  inspector_placeholder.gd  inspector_string.gd  inspector_util.gd  property_info.gd
godot/resources/: build_profile.build  theme.tres  times.tres  times12_72dpi.fnt  times12_72dpi.fnt.import  times12_72dpi_0.png.import  times16_72dpi.fnt  times16_72dpi.fnt.import  times16_72dpi_0.png.import  times_bold16_72dpi.fnt  times_bold16_72dpi.fnt.import  times_bold16_72dpi_0.png.import  upscale.gdshader  wrapper.gdshader
godot/scenes/: inspector_towermod.gd  promise.gd  status_label.gd  towermod_util.gd  util.gd
godot/scenes/cursor/: custom_cursor_area.gd
godot/scenes/events/: event.gd  event.tscn  event_action.gd  event_action.tscn  event_condition.gd  event_condition.tscn  event_group.gd  event_group.tscn  event_util.gd
godot/scenes/file_picker/: file_picker.gd  file_picker.tscn
godot/scenes/focus_ring/: focus_ring.gd  focus_ring.tscn
godot/scenes/image_picker/: image_picker.gd  image_picker.tscn
godot/scenes/int_texture/: int_texture.gd  int_texture.tscn
godot/scenes/loading_spinner/: loading_spinner.gd  loading_spinner.tscn
godot/scenes/main/: main.gd  main.tscn
godot/scenes/modal/: error_modal.gd  error_modal.tscn  export_modal.gd  export_modal.tscn  file_path_modal.gd  file_path_modal.tscn  modal.gd  modal.tscn  save_modal.gd  save_modal.tscn
godot/scenes/outliner/: outliner.gd  (+3 more)
godot/sprites/: checkbox_off.png.import  checkbox_on.png.import  cursor.png.import  exit.png.import  icon.svg.import  minimize.png.import  test1.png.import  test2.png.import  transparent.png.import
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/towermod/: 2  Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
rust/towermod-cli/: Cargo.toml
rust/towermod-cli/src/: main.rs
rust/towermod-cstc/: Cargo.toml
rust/towermod-cstc/src/: expression.rs  lib.rs  plugin.rs
rust/towermod-cstc/src/binary/: appblock.rs  block.rs  eventblock.rs  levelblock.rs  pluginobject.rs  system_plugin_object.rs
rust/towermod-cstc/src/stable/: mod.rs
rust/towermod-dllreader/: Cargo.toml
rust/towermod-dllreader/src/: lib.rs  main.rs  plugin_ffi.rs
rust/towermod-godot/: Cargo.toml
rust/towermod-godot/src/: app.rs  bindings.rs  lib.rs  mapping_helpers.rs  messenger.rs  util.rs
rust/towermod-godot/src/bindings/: animation.rs  animation_frame.rs  app_block.rs  behavior.rs  data.rs  enums.rs  event.rs  family.rs  feature_descriptors.rs  image_resource.rs  layout.rs  layout_layer.rs  object_container.rs  object_instance.rs  object_trait.rs  object_type.rs  plugin_data.rs  sprite_object_data.rs  text_object_data.rs
rust/towermod-godot/src/bindings/etc/: project.rs
rust/towermod-godot/src/util/: unsafe_gd.rs
rust/towermod-shared/: Cargo.toml  build.rs
rust/towermod-shared/src/: config.rs  dllreader_client.rs  filesystem.rs  game_images.rs  lib.rs  newtype.rs  pe_resource.rs  project.rs
rust/towermod-shared/src/app/: mod.rs
rust/towermod-shared/src/app/selectors/: app.rs  config.rs  data.rs
rust/towermod-shared/src/app/state/: app_state.rs  config_state.rs  data_state.rs  mod.rs
rust/towermod-shared/src/app/thunks/: app.rs  config.rs  data.rs  export.rs
rust/towermod-shared/src/cstc_editing/: cstc_editing.rs  mod.rs
rust/towermod-util/: Cargo.toml
rust/towermod-util/src/: lib.rs  macros.rs  util.rs
rust/towermod-win32/: Cargo.toml
rust/towermod-win32/src/: lib.rs  pe_resource.rs  pipe.rs  process.rs  registry.rs  util.rs
rust/towermod/capabilities/: default.json
rust/towermod/icons/: icon.icns
rust/towermod/src/: app.rs  config.rs  dllreader.rs  lib.rs  macros.rs  main.rs  newtype.rs  project.rs  run.rs  tcr.rs  util.rs
rust/towermod/src/app/: api.rs  app.rs  mod.rs
rust/towermod/src/app/selectors/: app.rs  config.rs  data.rs  mod.rs
rust/towermod/src/app/state/: app_state.rs  config_state.rs  data_state.rs  mod.rs
rust/towermod/src/app/thunks/: app.rs  config.rs  data.rs  export.rs  mod.rs
rust/towermod/src/cstc/: appblock.rs  block.rs  dllblock.rs  eventblock.rs  expression.rs  imageblock.rs  levelblock.rs  mod.rs  plugin.rs  pluginobjects.rs  system_plugin_object.rs
rust/towermod/src/cstc/stable/: mod.rs
rust/towermod/src/etc/: config.rs  filesystem.rs  game_images.rs  mod.rs  newtype.rs  pe_resource.rs  pipe.rs  project.rs  registry.rs  run.rs  tcr.rs  util.rs
rust/towermod/src/tauri/: commands.rs  mod.rs  tauri.rs  util.rs
rust/towermod/tests/: resource_tests.rs
src/: App.module.scss  App.tsx  _mixins.scss  api.ts  appContext.tsx  base.scss  dataUtil.ts  env.d.ts  global.scss  greet.ts  hooks.ts  main.scss  main.tsx  rpc.ts  store.ts  thunks.ts  towermod.d.ts  towermod.ts  util.ts
src/api/: api.ts  apiUtil.ts  baseApiUtil.ts  data.ts  dataApi.ts  helpers.tsx  index.ts  newApi.ts  newDataApi.ts
src/app/: Events.tsx
src/appUtil/: appUtil.tsx  index.ts
src/components/: FilePathEdit.tsx  Icon.tsx  Portal.tsx  Spinner.tsx  Text.tsx
src/css/: _classes.scss  _mixins.scss  main.css  main.scss
src/reducers/: data.ts
src/redux/: index.ts  store.ts
src/shared/: dataUtil.ts  util.ts
src/stories/: Button.stories.ts  Combobox.stories.tsx  ComboboxButton.stories.tsx  DropdownMenu.stories.tsx  IconButton.stories.ts  Select.stories.ts
src/util/: dataUtil.ts  hooks.ts  image.ts  index.ts  rpc.ts  thunks.ts  util.ts
ui/: .editorconfig  .eslintrc.cjs  .gitignore  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
(+224 files in other folders)
