[workspace]
members = ["towermod"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["taffyko"]

[workspace.dependencies]
towermod = { path = "towermod" }
anyhow = { git = "https://github.com/taffyko/anyhow-tauri", features = ['backtrace'] }
serde = { version = "1.0", features = ["derive"] }
cached = { version = "0.51.4", features = ["async"] }
serde_json = "1.0.107"
serde_alias = "0.0.2"
scopeguard = "1.2.0"
rmp-serde = "1.1.2"
libc = "0.2.148"
num-traits = "0.2"
enum-kinds = "0.5.1"
num-derive = "0.4"
derivative = "2.2.0"
log = "0.4.20"
tracing = "0.1.40"
toml = "0.8.14"
tracing-subscriber = "0.3.17"
tracing-log = "0.2"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
futures = "0.3.28"
strum = "0.25.0"
strum_macros = "0.25.3"
once_cell = "1.18.0"
backtrace = "0.3.69"
indoc = "2.0.5"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
zip-extract = "0.1.3"
zip = { version = "2.1.3", features = ["time"] }
bidiff = "1.0.0"
bipatch = "1.0.0"
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"
filetime = "0.2.23"
async-walkdir = "2.0.0"
env_logger = "0.10.0"
tracing-flame = "0.2.0"
zstd = "0.13.2"
fs-err = { version = "2.11.0", features = ["tokio"] }

[profile.dev]
strip = false

[profile.dev.build-override]
opt-level = 3
