[workspace]
members = ["towermod", "towermod-win32", "towermod-cstc", "towermod-shared", "towermod-dllreader"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["taffyko"]

[workspace.dependencies]
towermod = { path = "towermod" }
towermod-util = { path = "towermod-util" }
towermod-win32 = { path = "towermod-win32" }
towermod-cstc = { path = "towermod-cstc" }
towermod-shared = { path = "towermod-shared" }
towermod-dllreader = { path = "towermod-dllreader" }
anyhow = { git = "https://github.com/taffyko/anyhow-tauri", features = ['backtrace'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serde_alias = "0.0.2"
scopeguard = "1.2.0"
rmp-serde = "1.1.2"
libc = "0.2.148"
num-traits = "0.2"
num-derive = "0.4"
derivative = "2.2.0"
log = "0.4.20"
tracing = "0.1.40"
toml = "0.8.14"
tracing-subscriber = "0.3.17"
tracing-log = "0.2"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
tokio-stream = { version = "0.1.14", features = ["fs"] }
futures = "0.3.28"
once_cell = "1.18.0"
backtrace = "0.3.69"
indoc = "2.0.5"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
zip-extract = "0.1.3"
zip = { version = "2.1.3", features = ["time"] }
bidiff = "1.0.0"
bipatch = "1.0.0"
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"
async-walkdir = "2.0.0"
zstd = "0.13.2"
fs-err = { version = "2.11.0", features = ["tokio"] }
windows = { version = "0.51.1", features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_Shutdown", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_System_ProcessStatus", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_Registry"] }
glob = "0.3.1"
thiserror = "1.0.48"
md5 = "0.7.0"
reqwest = "0.12.5"
console-subscriber = "0.4.1"
lazy_static = "1.5.0"
redux-rs = "0.3.3"
static_assertions = "1.1.0"
rfd = "0.15.2"
itertools = "0.14.0"
indexmap = { version = "2.7", features = ["serde"] }

[profile.dev]
strip = false

[profile.dev.build-override]
opt-level = 3
