[package]
name = "towermod-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
towermod = { workspace = true, features = ["bundled-dllreader"] }
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
log.workspace = true
tracing.workspace = true
env_logger.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true
