[package]
name = "towermod-cstc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
num-traits.workspace = true
num-derive.workspace = true
derivative.workspace = true
serde_alias.workspace = true
windows.workspace = true


[build-dependencies]
tauri-build = { version = "2", features = [] }

