[package]
name = "towermod-cstc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[target.'cfg(windows)'.dependencies]
windows.workspace = true
towermod-win32.workspace = true

[dependencies]
towermod-util.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
num-traits.workspace = true
num-derive.workspace = true
derivative.workspace = true
serde_alias.workspace = true
tempfile.workspace = true
tracing.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

