[package]
name = "towermod-dllreader"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "dllreader"
path = "src/main.rs"

[dependencies]
towermod-cstc.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
derivative.workspace = true
windows.workspace = true


[build-dependencies]
tauri-build = { version = "2", features = [] }

