[package]
name = "towermod-godot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "towermod"
crate-type = ["cdylib"]

[dependencies]
delegate = "0.10.0"
godot = { git = "https://github.com/godot-rust/gdext", features = ["api-custom", "experimental-threads"] }
towermod = { workspace = true, features = ["bundled-dllreader"] }
rmp-serde.workspace = true
time.workspace = true
autostruct.workspace = true
log.workspace = true
futures.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
num-traits.workspace = true
num-derive.workspace = true
derivative.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
once_cell.workspace = true
backtrace.workspace = true
indoc.workspace = true
async-scoped.workspace = true
zip-extract.workspace = true
zip.workspace = true
bidiff.workspace = true
bipatch.workspace = true
uuid.workspace = true
scopeguard.workspace = true
toml.workspace = true
bindgen = "0.69.4"
lazy_static = "1.5.0"
async-recursion = "1.1.1"
console-subscriber = "0.3.0"
format = "0.2.4"
tracing.workspace = true
env_logger.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true
fs-err.workspace = true
