[package]
name = "towermod-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["bundled-dllreader"]
bundled-dllreader = []


[dependencies]
towermod-util.workspace = true
towermod-win32.workspace = true
towermod-cstc.workspace = true
anyhow.workspace = true
scopeguard.workspace = true
serde.workspace = true
rmp-serde.workspace = true
derivative.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
log.workspace = true
time.workspace = true
indoc.workspace = true
async-scoped = { workspace = true, features = ["use-tokio"] }
zip-extract.workspace = true
zip.workspace = true
toml.workspace = true
serde_alias.workspace = true
fs-err.workspace = true
windows.workspace = true
glob.workspace = true
md5.workspace = true
reqwest.workspace = true
rfd.workspace = true


[build-dependencies]
tauri-build = { version = "2", features = [] }

