[package]
name = "towermod-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["bundled-dllreader"]
bundled-dllreader = []

[target.'cfg(windows)'.dependencies]
towermod-win32.workspace = true
windows.workspace = true

[dependencies]
towermod-util.workspace = true
towermod-cstc.workspace = true
anyhow.workspace = true
scopeguard.workspace = true
serde.workspace = true
rmp-serde.workspace = true
derivative.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
log.workspace = true
time.workspace = true
indoc.workspace = true
async-scoped = { workspace = true, features = ["use-tokio"] }
zip-extract.workspace = true
zip.workspace = true
toml.workspace = true
serde_alias.workspace = true
fs-err.workspace = true
glob.workspace = true
md5.workspace = true
reqwest.workspace = true
rfd.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
redux-rs.workspace = true
itertools.workspace = true
indexmap.workspace = true
tempfile.workspace = true
directories.workspace = true
lief.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

