[package]
name = "towermod-util"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
futures.workspace = true
tokio.workspace = true
log.workspace = true
zip.workspace = true
bidiff.workspace = true
bipatch.workspace = true
walkdir.workspace = true
async-walkdir.workspace = true
zstd.workspace = true
fs-err.workspace = true
async-scoped.workspace = true
tracing.workspace = true


[build-dependencies]
tauri-build = { version = "2", features = [] }

