[package]
name = "towermod-win32"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
towermod-util.workspace = true
anyhow.workspace = true
scopeguard.workspace = true
tokio.workspace = true
tracing.workspace = true
log.workspace = true
windows.workspace = true


[build-dependencies]
tauri-build = { version = "2", features = [] }

