[package]
name = "towermod"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "towermod"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "towermod_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dllreader"
path = "src/dllreader.rs"

[features]
bundled-dllreader = []

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-bindgen-host = { git = "https://github.com/tauri-apps/tauri-bindgen" }
towermod-util.workspace = true
towermod-win32.workspace = true
towermod-cstc.workspace = true
towermod-shared.workspace = true
anyhow.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
libc.workspace = true
num-traits.workspace = true
num-derive.workspace = true
enum-kinds.workspace = true
derivative.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
log.workspace = true
once_cell.workspace = true
backtrace.workspace = true
cached.workspace = true
time.workspace = true
indoc.workspace = true
async-scoped = { workspace = true, features = ["use-tokio"] }
zip-extract.workspace = true
zip.workspace = true
bidiff.workspace = true
bipatch.workspace = true
toml.workspace = true
walkdir.workspace = true
filetime.workspace = true
async-walkdir.workspace = true
zstd.workspace = true
serde_alias.workspace = true
fs-err.workspace = true
windows.workspace = true
glob.workspace = true
thiserror.workspace = true
md5.workspace = true
reqwest.workspace = true
console-subscriber.workspace = true
lazy_static.workspace = true
redux-rs.workspace = true
static_assertions.workspace = true
rfd.workspace = true
itertools.workspace = true


[build-dependencies]
tauri-build = { version = "2", features = [] }

