[package]
name = "towermod"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-run = "towermod"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "towermod_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
towermod-util.workspace = true
towermod-win32.workspace = true
towermod-cstc.workspace = true
towermod-shared.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
log.workspace = true
fs-err.workspace = true
console-subscriber.workspace = true
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"


[build-dependencies]
tauri-build = { version = "2", features = [] }

